Visibility levels increased, and fixed GB button.
Various elements made larger, and made buttons default to sharp.

--- a/editor-style.css
+++ b/editor-style.css
@@ -18,32 +18,32 @@ body {
 .rt-alert {
 	padding: 1em;
 	background-color: #E7E7E7;
-	border-bottom: solid 2px #8E8E8E;
+	border-bottom: solid 4px #8E8E8E;
 	color: #464644;
 }
 
 .rt-alert.info {
 	background-color: #66CCFF;
-	border-bottom: solid 2px #3E94C0;
+	border-bottom: solid 4px #3E94C0;
 	color: #000;
 }
 
 
 .rt-alert.success {
 	background-color: #339900;
-	border-bottom: solid 2px #205F00;
+	border-bottom: solid 4px #205F00;
 	color: #FFF;
 }
 
 .rt-alert.warning {
 	background-color: #FFCC00;
-	border-bottom: solid 2px #C69E00;
+	border-bottom: solid 4px #C69E00;
 	color: #000;
 }
 
 .rt-alert.error {
 	background-color: #CC3300;
-	border-bottom: solid 2px #761D00;
+	border-bottom: solid 4px #761D00;
 	color: #FFF;
 }
 /* End of ReviveToday Alerts */
